Renamed some files

--- a/public/manual.html
+++ b/public/manual.html
@@ -5,7 +5,7 @@
         <title>Strata Manual</title>
     </head>
     <frameset cols="200, *" framespacing="0" border="1">
-        <frame src="/manual/chapters">
+        <frame src="/manual/chapter-index">
         <frame src="/manual/01" name="content">
     </frameset>
 </html>
