--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Strata Web Framework</title>
+        <meta name="viewport" content="width=360, minimum-scale=0.86, maximum-scale=1.0, user-scalable=yes">
         <link rel="stylesheet" type="text/css" href="/reset.css">
         <link rel="stylesheet" type="text/css" href="/index.css">
     </head>
