Added Google Groups URL

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
                     </a>
                 </li>
                 <li class="question">
-                    <a href="#">
+                    <a href="http://groups.google.com/group/stratajs">
                         <h2>Ask a Question</h2>
-                        <p>Join the mailing list to talk about Strata and get updates.</p>
+                        <p>Join the Google Group to talk about Strata and get updates.</p>
                     </a>
                 </li>
                 <li class="code">
