Updated to Strata 0.5.4

--- a/public/manual.html
+++ b/public/manual.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Strata Manual</title>
+        <title>Strata User Manual</title>
     </head>
     <frameset cols="200, *" framespacing="0" border="1">
         <frame src="/manual/chapter-index">
