--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div id="wrapper">
             <div id="title">
                 <h1>STRATA</h1>
-                <p>streaming web framework for node.js</p>
+                <p>streaming HTTP framework for node.js</p>
             </div>
             <ul id="menu">
                 <li class="manual">
